# CMakeCPPTemplate

./: .gitignore  CMakeLists.txt  LICENSE  README.md  c_flag_overrides.cmake  cxx_flag_overrides.cmake
include/: README.md
lib/: README.md
lib/win32/: README.md
lib/win64/: README.md
src/: README.md
src/include/: README.md
test/: README.md
